<resources>
    <string name="app_name">Szyfry</string>

    <string name="text_cMorse">Koduj morse\'a</string>
    <string name="text_dMorse">Dekoduj morse\'a</string>
    <string name="text_playfair">Szyfr Playfaira</string>
    <string name="text_save">Zapisz</string>
    <string name="text_keyName">Nazwa klucza</string>
    <string name="text_key">Klucz</string>
    <string name="text_encrypt">Szyfruj</string>
    <string name="text_decrypt">Deszyfruj</string>
    <string name="text_copy">Kopiuj</string>
    <string name="text_paste">Wklej</string>
    <string name="text_settings">Preferencje</string>
    <string name="text_others">Ściąga</string>
    <string name="text_newKey">NOWY KLUCZ</string>
    <string name="text_none" />

    <string name="text_update_actual">Wersja jest aktualna</string>
    <string name="text_update_new">Nowa wersja %1$s, aktualna to %2$s</string>
    <string name="text_update_new_title">Nowa wersja</string>
    <string name="text_update_open">Otwórz stronę pobierania</string>
    <string name="text_update_close">Zamknij</string>

    <string name="toast_copy">Skopiowano do schowka</string>

    <string name="hint_inProcess">Dane do przetworzenia</string>
    <string name="hint_inCode">Tekst do zakodowania</string>

    <string name="ch_middle_dot">•</string>
    <string name="ch_line">-</string>
    <string name="ch_slash">/</string>
    <string name="ch_back"><![CDATA[<-]]></string>
    <string name="ch_triangle">▽</string>
    <string name="ch_hamburger">≡</string>

    <string name="title_main">Szyfry</string>
    <string name="title_others">Ściąga</string>
    <string name="title_dMorse">Dekoduj Morse\'a</string>
    <string name="title_cMorse">Koduj Morse\'a</string>
    <string name="title_playfair">Szyfr Playfaira</string>
    <string name="title_playfairKey">Generowanie klucza</string>
    <string name="title_settings">Preferencje</string>

    <string name="key_morseUnicode">morse_copy_unicode</string>
    <string name="key_playfairDev">playfair_dev</string>
    <string name="key_generalUpdates">general_updates</string>

    <string name="settings_text_morseUnicode">Kopiuj jako Unicode</string>
    <string name="settings_textOn_morseUnicode">Lepiej wygląda, dłuższy tekst</string>
    <string name="settings_textOff_morseUnicode">Gorszy wygląd, krótki tekst</string>

    <string name="settings_text_playfairDev">Tryb deweloperski</string>

    <string name="settings_text_generalUpdates">Sprawdzaj aktualizacje tylko przez WiFi</string>
    <string name="settings_textOn_generalUpdates">Sprawdzaj aktualizacje tylko przez WiFi</string>
    <string name="settings_textOff_generalUpdates">Sprawdzaj aktualizacje gdy internet jest dostępny</string>

    <string name="update_repo">dominikk787/Szyfry_Android</string>
</resources>